Discovery: Style Header

--- a/src/App.css
+++ b/src/App.css
@@ -96,6 +96,39 @@ input:focus, textarea:focus, select:focus {
 	}
 }
 
+.liquid-button {
+  background: linear-gradient(120deg, #170d79, #381b58, #a80ba8);
+  border: none;
+  padding: 10px 20px;
+  border-radius: 50px;
+  position: relative;
+  overflow: hidden;
+}
+.liquid-button-inverse {
+  background: linear-gradient(120deg, #a80ba8, #381b58, #170d79);
+  border: none;
+  padding: 10px 20px;
+  border-radius: 50px;
+  position: relative;
+  overflow: hidden;
+}
+.liquid-button::before {
+  content: "";
+  position: absolute;
+  top: -50%;
+  left: -50%;
+  width: 200%;
+  height: 200%;
+  background: rgba(255, 255, 255, 0.1);
+  animation: liquid 5s infinite linear;
+}
+@keyframes liquid {
+  0% { transform: translate(0, 0); }
+  100% { transform: translate(50%, 50%); }
+}
+
+
+
 p.success {
 	color: green;
 }
@@ -344,6 +377,8 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   text-align: center;
   padding: 60px 50px;
   margin-top: -60px;
+  /* opacity: .08; */
+  /* filter: blur(10px) */
 }
 .skill h2 {
 	font-size: 45px;
