--- a/src/App.css
+++ b/src/App.css
@@ -127,6 +127,22 @@ input:focus, textarea:focus, select:focus {
   100% { transform: translate(50%, 50%); }
 }
 
+.letsConnectNav {
+  background: transparent;
+  padding: 10px 20px;
+  border-radius: 50px;
+  font-size: 16px;
+  color: #ffffff; /* Default text color */
+  cursor: pointer;
+  transition: color 0.3s ease; /* Smooth transition for color */
+}
+
+.letsConnectNav:hover {
+  color: rgb(223, 118, 223); /* Change text color to purple */
+}
+
+
+
 
 
 p.success {
