--- a/src/Styletics.css
+++ b/src/Styletics.css
@@ -21,5 +21,14 @@
     overflow: hidden;
   }
 
+  canvas {
+    display: block;
+    margin-left: 100px;
+}
+
+#cloudBuffer {
+  height: 100px;
+  width: 100px;
+}
 
 
