STYLITICS: Navbar Opacity fix

--- a/src/App.css
+++ b/src/App.css
@@ -181,6 +181,7 @@ nav.navbar {
 nav.navbar.scrolled {
   padding: 0px 0;
   background-color: #121212;
+  opacity: 60%;
 }
 nav.navbar a.navbar-brand {
     width: 9%;
