THREE: Fix Buttons

--- a/src/App.css
+++ b/src/App.css
@@ -248,7 +248,7 @@ span.navbar-text {
   margin-left: 18px;
 	position: relative;
 	background-color: transparent;
-	transition: 0.3s ease-in-out;
+	/* transition: 0.3s ease-in-out; */
 }
 .navbar-text button span {
   z-index: 1;
@@ -262,7 +262,7 @@ span.navbar-text {
   left: 0;
   top: 0;
   z-index: -1;
-  transition: 0.3s ease-in-out;
+  /* transition: 0.3s ease-in-out; */
 }
 .navbar-text button:hover {
   color: #121212;
