Stylitics: Implemnt Clean Project buttons

--- a/src/App.css
+++ b/src/App.css
@@ -507,7 +507,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
     position: absolute;
     width: 0;
     height: 100%;
-    background: linear-gradient(90.21deg, #AA367C -5.91%, #4A2FBD 111.58%);
+    background: linear-gradient(90.21deg, #AA367C -5.91%, #4A2FBD 100.58%);
     top: 0;
     left: 0;
     z-index: -1;
@@ -517,19 +517,21 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
     width: 100% !important;
 }
 .project .nav.nav-pills .nav-link.active {
-    border: 1px solid rgba(255, 255, 255, 1);
+    border: 1px solid rgba(255, 255, 255, 2);
+    overflow: hidden;
 }
 .nav-link#projects-tabs-tab-first {
-  border: 1px solid rgba(255, 255, 255, 0.5);
+  border: 1px solid rgba(255, 255, 255, 3);
   border-radius: 55px 0px 0px 55px;
 }
 .nav-link#projects-tabs-tab-second {
-  border-top: 1px solid rgba(255, 255, 255, 0.5);
-  border-bottom: 1px solid rgba(255, 255, 255, 0.5);
+  border-top: 1px solid rgba(255, 255, 255, 3);
+  border-bottom: 1px solid rgba(255, 255, 255, 3);
 }
 .nav-link#projects-tabs-tab-third {
-  border: 1px solid rgba(255, 255, 255, 0.5);
+  border: 1px solid rgba(255, 255, 255, 3);
   border-radius: 0 55px 55px 0;
+  overflow: hidden;
 }
 .proj-imgbx {
   position: relative;
@@ -539,7 +541,8 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 }
 .proj-imgbx::before {
   content: "";
-  background: linear-gradient(90.21deg, #AA367C -5.91%, #4A2FBD 111.58%);
+  background: linear-gradient(90.21deg, #AA367C -5.91%, #4A2FBD 100.58%);
+  overflow: hidden;
   opacity: 0.85;
   position: absolute;
   width: 100%;
@@ -548,10 +551,12 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 }
 .proj-imgbx:hover::before {
   height: 100%;
+  overflow: hidden;
 }
 .proj-txtx {
   position: absolute;
   text-align: center;
+  overflow: hidden;
   top: 65%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -562,6 +567,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 .proj-imgbx:hover .proj-txtx {
   top: 50%;
   opacity: 1;
+  overflow: hidden;
 }
 .proj-txtx h4 {
   font-size: 30px;
