Stylitics: Dynamic Navigation Bug Updates

--- a/src/Styletics.css
+++ b/src/Styletics.css
@@ -27,4 +27,19 @@
   }
 
 
+  /* Focus Carousel */
+  .react-multi-carousel-item .item {
+    margin-right: 30px;
+  }
+  
+  .react-multi-carousel-track {
+    display: flex;
+    gap: 30px;
+  }
+
+
+  #footer-logo {
+    pointer-events: none;
+    background-size: cover;
+  }
 
