--- a/src/App.css
+++ b/src/App.css
@@ -62,6 +62,11 @@ h1, h2, h3, h4, h5, h6 {
   margin: 0;
   padding: 0;
   line-height: normal;
+  user-select: none;
+}
+
+h7, a, p {
+  user-select: none;
 }
 
 p, a, li, button, ul {
