--- a/src/App.css
+++ b/src/App.css
@@ -214,7 +214,24 @@ nav.navbar.scrolled {
 }
 nav.navbar a.navbar-brand {
   width: 9%;
-  transition: transform 0.3s ease-in-out;
+  animation: pulse 2s infinite;
+}
+#pulse {
+  pointer-events: none;
+  opacity: 0.15;
+  animation: pulse 2s infinite;
+}
+
+@keyframes pulse {
+    0% {
+        opacity: 0.25;
+    }
+    50% {
+        opacity: 0.5;
+    }
+    100% {
+        opacity: 0.25;
+    }
 }
 a.navbar-brand:hover {
   transform: scale(1.2) rotate(360deg);
