--- a/src/Styletics.css
+++ b/src/Styletics.css
@@ -33,3 +33,31 @@
     opacity: 25%;
   }
 
+
+
+  .box {
+    width: 50px;
+    height: 50px;
+    background-color: #007bff;
+    border-radius: 50%;
+    animation: bounce 3s infinite ease-in-out;
+  }
+  
+  .box:nth-child(2) {
+    animation-delay: 0.5s;
+  }
+  
+  .box:nth-child(3) {
+    animation-delay: 1s;
+  }
+  
+  @keyframes bounce {
+    0%, 100% {
+      transform: translateY(0);
+    }
+    50% {
+      transform: translateY(-50px);
+    }
+  }
+  
+
