--- a/src/App.css
+++ b/src/App.css
@@ -528,7 +528,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   position: relative;
   background-color: black;
 }
-.project h2 {
+.project h2, h4 {
 	font-size: 45px;
 	font-weight: 700;
   text-align: center;
